# edge-mining-core

./: DEVELOPMENT_WORKFLOW.md  DEV_TOOLS.md  Makefile  README.md  pyproject.toml  requirements.txt
edge_mining/adapters/: utils.py
edge_mining/adapters/domain/energy/: schemas.py
edge_mining/adapters/domain/energy/cli/: commands.py
edge_mining/adapters/domain/energy/fast_api/: router.py
edge_mining/adapters/domain/home_load/providers/: __init__.py
edge_mining/adapters/domain/miner/: schemas.py
edge_mining/adapters/domain/miner/cli/: commands.py
edge_mining/adapters/domain/miner/controllers/: pyasic.py
edge_mining/adapters/domain/miner/fast_api/: router.py
edge_mining/adapters/domain/notification/: schemas.py
edge_mining/adapters/infrastructure/api/: main_api.py
edge_mining/adapters/infrastructure/external_services/: schemas.py
edge_mining/adapters/infrastructure/logging/: terminal_logging.py
edge_mining/application/: interfaces.py
edge_mining/application/services/: adapter_service.py  configuration_service.py
edge_mining/shared/adapter_configs/: miner.py
edge_mining/shared/settings/: common.py  settings.py
