[project]
name = "edge-mining"
version = "0.1.0"
description = "The main logic behind edge-mining"
authors = [
]
license = "LICENSE"
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "click (>=8.2.1,<9.0.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
    "pydantic (<2.9)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.web.dependencies]
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.3"}


[tool.poetry.group.hass.dependencies]
homeassistant-api = "^5.0.0"


[tool.poetry.group.telegram.dependencies]
python-telegram-bot = "^22.1"

